# rho

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml
.claude/: settings.json
crates/rho/: Cargo.toml
crates/rho-agent/: Cargo.toml
crates/rho-agent/benches/: convert.rs  hotspots.rs
crates/rho-agent/src/: agent_loop.rs  convert.rs  events.rs  hooks.rs  lib.rs  registry.rs  tools.rs  types.rs
crates/rho-ai/: Cargo.toml
crates/rho-ai/src/: events.rs  lib.rs  models.rs  provider.rs  retry.rs  stream.rs  tool_choice.rs  transform.rs  types.rs
crates/rho-ai/src/providers/: anthropic.rs  mod.rs  openai_completions.rs  openai_responses.rs  sse.rs
crates/rho-text/: Cargo.toml
crates/rho-text/benches/: text.rs
crates/rho-text/src/: ansi.rs  lib.rs  sanitize.rs  slice.rs  truncate.rs  width.rs  wrap.rs
crates/rho-tools/: Cargo.toml
crates/rho-tools/src/: cancel.rs  clipboard.rs  error.rs  fd.rs  fs_cache.rs  glob.rs  glob_util.rs  grep.rs  html.rs  image.rs  lib.rs  prof.rs  ps.rs  pty.rs  shell.rs  workmux.rs
crates/rho-tools/src/shell/: windows.rs
crates/rho-tui/: Cargo.toml
crates/rho-tui/benches/: keys.rs  markdown.rs  stdin_buffer.rs
crates/rho-tui/src/: capabilities.rs  component.rs  fuzzy.rs  highlight.rs  keybindings.rs  kill_ring.rs  lib.rs  overlay.rs  stdin_buffer.rs  symbols.rs  terminal.rs  theme.rs  tui.rs
crates/rho-tui/src/components/: autocomplete.rs  editor_component.rs  filterable_select.rs  input.rs  loader.rs  markdown.rs  mod.rs  output_block.rs  padded_box.rs  select_list.rs  settings_list.rs  spacer.rs  tab_bar.rs  text.rs  truncated_text.rs
crates/rho-tui/src/components/editor/: editing.rs  history.rs  layout.rs  mod.rs  motion.rs  state.rs
crates/rho-tui/src/keys/: legacy.rs  match_key.rs  mod.rs  parse.rs  types.rs
crates/rho/src/: cli.rs  config.rs  lib.rs  main.rs  models_config.rs  settings.rs
crates/rho/src/ai/: anthropic.rs  types.rs
crates/rho/src/commands/: dispatch.rs  mod.rs  registry.rs  types.rs
crates/rho/src/commands/handlers/: clipboard.rs  compact.rs  config_cmd.rs  help.rs  mod.rs  model.rs  navigation.rs  plan.rs  profile.rs  session.rs
crates/rho/src/compaction/: compact.rs  cut_point.rs  file_ops.rs  mod.rs  serialize.rs  settings.rs  tokens.rs
crates/rho/src/extensions/: discovery.rs  manager.rs  mod.rs  sample.rs  types.rs
crates/rho/src/extensions/lua/: bridge.rs  extension.rs  hooks.rs  mod.rs  runtime.rs  tool.rs
crates/rho/src/modes/: input.rs  interactive.rs  mod.rs  state.rs
crates/rho/src/prompts/: context_files.rs  environment.rs  git.rs  mod.rs  types.rs
crates/rho/src/prompts/compaction/: compaction-summary-context.md  compaction-summary.md  file-operations.md  mod.rs
crates/rho/src/prompts/system/: mod.rs  system-prompt.md
crates/rho/src/prompts/tools/: bash.md  clipboard.md  edit.md  find.md  fuzzy_find.md  grep.md  html_to_markdown.md  image.md  mod.rs  process.md  read.md  workmux.md  write.md
crates/rho/src/session/: blob_store.rs  breadcrumb.rs  context.rs  mod.rs  paths.rs  snowflake.rs  storage.rs  types.rs
crates/rho/src/tools/: bash.rs  clipboard.rs  edit.rs  find.rs  fuzzy_find.rs  grep.rs  html_to_markdown.rs  image.rs  mod.rs  process.rs  read.rs  registry.rs  workmux.rs  write.rs
crates/rho/src/tui/: autocomplete.rs  chat.rs  mod.rs  model_selector.rs  status.rs  tool_renderers.rs  welcome.rs
crates/rho/src/utils/: platform.rs
docs/: command-event-architecture.md  steer-queue-plan.md  tui-refactor-plan.md
docs/plans/: 2026-02-23-steer-follow-up-queue.md  2026-02-23-system-prompt-assembly.md  2026-02-25-agent-cancellation-design.md  2026-02-25-agent-cancellation-plan.md  2026-02-26-i1-i2-i3-bugfixes-design.md  2026-02-26-i1-i2-i3-bugfixes-plan.md  2026-02-28-reference-implementation-review.md  2026-03-01-dual-loop-implementation-plan.md  2026-03-01-dual-loop-two-tier-queue-design.md
docs/research/microvm-agent-isolation/: PROMPT.md  README.md  prior-art.md
nix/: devshell.nix
