[package]
name = "rho-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rho-ai = { path = "../rho-ai" }
tokio = { version = "1", features = ["time", "sync"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
async-trait = "0.1"

[dev-dependencies]
criterion.workspace = true
serde_json = "1"
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "convert"
harness = false

[lints]
workspace = true
