[package]
name = "rho-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["time", "sync", "rt"] }
tokio-util = "0.7"
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
anyhow = "1"
bytes = "1"
futures-util = "0.3"
regex = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
